Issue #29327: Fixed a crash when pass the iterable keyword argument to sorted().